infra/dev/app-update/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ig
  namespace: inapp-update-manager
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: inapp.dev-polygontech.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inapp-update-manager
                port:
                  name: http
